--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,12 +23,17 @@ jobs:
     - name: Build project
       run: npm run build --if-present
       
-    - name: Deploy via SFTP
-      uses: wlixcc/SFTP-Deploy-Action@v1.2.6
+    - name: Deploy via FTPS
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
         server: ${{ secrets.FTP_SERVER }}
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
-        local_path: './build/*'
-        remote_path: '/httpdocs'
-        sftpArgs: '-o ConnectTimeout=5'
+        protocol: ftps
+        security: strict
+        local-dir: ./build/
+        server-dir: /kollegen.muenchner-energieagentur.de/
+        exclude: |
+          **/.git*
+          **/.git*/**
+          **/node_modules/**
