--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,18 +23,12 @@ jobs:
     - name: Build project
       run: npm run build --if-present
       
-    - name: Deploy via FTPS
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+    - name: Deploy via FTP
+      uses: sebastianpopp/ftp-action@releases/v2
       with:
-        server: ${{ secrets.FTP_SERVER }}
-        username: ${{ secrets.FTP_USERNAME }}
+        host: ${{ secrets.FTP_SERVER }}
+        user: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
-        local-dir: ./dist/
-        server-dir: /kollegen.muenchner-energieagentur.de/
-        protocol: ftp
-        passive: true
-        timeout: 60000
-        exclude: |
-          **/.git*
-          **/.git*/**
-          **/node_modules/**
+        localDir: "dist"
+        remoteDir: "kollegen.muenchner-energieagentur.de"
+        options: "--delete --asci"
