--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,5 +30,5 @@ jobs:
         user: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
         localDir: "dist"
-        remoteDir: "kollegen.muenchner-energieagentur.de"
+        remoteDir: "kollegen.muenchnerenergieagentur.de"
         options: "--delete --asci"
